# Assignment-4-for-UoT-Students

./: .gitignore  Dockerfile  EQ_Task.ipynb  NimaHM_SimilarSentence.ipynb  README.md  pyproject.toml
app/: main.py  train.py
